# cs336

./: README.md
assignment2-systems/: README.md
assignment2-systems/cs336-basics/: pyproject.toml
assignment2-systems/tests/: adapters.py
assignment3-scaling/: .gitignore  CHANGELOG.md  README.md  entrypoint.sh  make_submission.sh  pyproject.toml
assignment3-scaling/cs336_scaling/: app.py  auth.py  budget.py  client.py  config.py  experiment_state.py  internal_client.py  modal_utils.py  stable_hash.py  tokenized_data.py  utils.py
assignment3-scaling/cs336_scaling/api/: internal.py  public.py
assignment3-scaling/cs336_scaling/db/: __init__.py  sql_pydantic_types.py  tables.py
assignment3-scaling/cs336_scaling/log/: internal_client_errors.py  setup.py
assignment3-scaling/cs336_scaling/scheduler/: dispatch_loop.py  experiment_selector.py
assignment3-scaling/cs336_scaling/schemas/: __init__.py  base.py  event.py  experiment.py
assignment3-scaling/cs336_scaling/training/: data.py  loop.py  optimizer.py  run.py  training_config.py
assignment3-scaling/cs336_scaling/training/model/: _eqx_state_patch.py  basic_model.py  config.py  jax_utils.py  rope.py
assignment3-scaling/examples/: client_example.ipynb  dashboard.html
assignment3-scaling/scripts/: 1_download_tokenized_data.py
assignment3-scaling/scripts/db/: seed_users.py
assignment3-scaling/tests/: conftest.py  test_api.py  test_scheduler.py
assignment5-alignment/: pyproject.toml
assignment5-alignment/tests/: adapters.py
lectures/assets/: index-C7Yyog8u.js  index-CJlPj8BE.css  index-Df7yrRTL.js  (+1 more)
